# cells

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  main.cpp
src/: cellmap.cpp  render.cpp
src/include/: cellmap.hpp  render.hpp
